# wifi_audio_simple_sample

./: .gitignore  CMakeLists.txt  Kconfig  README.md  overlay-softap.conf  overlay-tcp.conf  prj.conf
boards/: nrf7002dk_nrf5340_cpuapp.overlay
src/: main.c  socket_util.c  socket_util.h  wifi_softap_mode.c
